# OnsetLab

./: .dockerignore  .gitignore  Architecture.md  Dockerfile  MANIFEST.in  PYPI_README.md  README.md  colab_finetune_qwen3b.ipynb  pyproject.toml  railway.json  requirements.txt  test_agent.py  test_github_slack.ipynb  test_interactive.py
.github/workflows/: publish.yml  test.yml
docs/: HYBRID_ROUTING.md  PACKAGING.md  PLAYGROUND_ARCHITECTURE.md  WHAT_WE_ARE_BUILDING.md
examples/: calendar_agent.py  calendar_tools.json
meta_agent/: README.md  __init__.py  gradio_ui.py  graph.py  requirements.txt  state.py  test_discovery.py  test_meta_agent.py  visualize_graph.py
meta_agent/api/: __init__.py  server.py
meta_agent/nodes/: __init__.py  compile_results.py  discover_servers.py  evaluate_mcp.py  extract_schemas.py  filter_tools.py  generate_guides.py  generate_notebook.py  load_registry.py  mark_as_api.py  parse_problem.py  prepare_tools.py  process_feedback.py  search_mcp.py  skill_generator.py  verify_server.py
meta_agent/registry/: _builtin_memory.json  filesystem.json  github.json  google_calendar.json  notion.json  slack.json  tavily.json
meta_agent/tools/: __init__.py  github_tools.py  npm_tools.py  tavily_search.py
meta_agent/utils/: __init__.py  gist_upload.py
onsetlab/: __init__.py  __main__.py  agent.py  builder.py  cli.py  mcp_registry.json  router.py
onsetlab/benchmark/: __init__.py  runner.py  scorer.py
onsetlab/benchmark/tests/: suite.json
onsetlab/data_generation/: data_generator.py  requirements.txt  test_generator.py  validator.py
onsetlab/execution/: __init__.py  sandbox.py
onsetlab/mcp/: __init__.py  client.py  server.py  tool_wrapper.py
onsetlab/mcp/registry/: __init__.py  filesystem.json  github.json  google_calendar.json  notion.json  slack.json  tavily.json
onsetlab/mcp_servers/: __init__.py  registry.py
onsetlab/memory/: __init__.py  conversation.py
onsetlab/model/: __init__.py  base.py  ollama.py
onsetlab/packaging/: __init__.py  binary_export.py  config_export.py  docker_export.py
onsetlab/rewoo/: __init__.py  executor.py  planner.py  react_fallback.py  solver.py  verifier.py
onsetlab/runtime/: __init__.py  agent_template.py  api_agent_template.py  base_agent.py  packager.py
onsetlab/skills/: __init__.py
onsetlab/synthesis/: __init__.py  data_generator.py  data_generator_v2.py  data_generator_v3.py  generators.py  prompt_generator.py  prompts.py  skill_generator.py  validators.py
onsetlab/tools/: __init__.py  base.py  calculator.py  code_executor.py  datetime_tool.py  random_generator.py  text_processor.py  unit_converter.py
onsetlab/training/: __init__.py  unsloth_trainer.py
onsetlab/utils/: __init__.py  schemas.py  validator.py
specs/: ARCHITECTURE.md  USER_JOURNEY.md
tests/: conftest.py  test_agent.py  test_hybrid_routing.py  test_imports.py  test_mcp.py  test_mcp_robust.py  test_packaging.py  test_planner.py  test_router.py  test_skills.py  test_tools.py
web/: README.md
web/backend/: .env.example  Dockerfile  requirements.txt
web/backend/app/: __init__.py  config.py  main.py
web/backend/app/models/: __init__.py  schemas.py
web/backend/app/routes/: __init__.py  chat.py  export.py  mcp.py  session.py
web/backend/app/services/: __init__.py  agent_service.py  mcp_manager.py  model_service.py  session_store.py
web/backend/static/playground/: index.html
web/backend/static/playground/assets/: index-BGgQqZBG.css  index-BM1p7y2F.css  index-BS4yFra9.js  index-BnYyfMfb.js  index-D_ZgbpKS.js  index-DuqqakIb.css  index-gCY4jT53.js  index-kFgw8OW9.js  index-umr2ORoA.css
web/backend/static/site/: index.html
web/backend/static/site/assets/: index-A6wO9f2G.js  index-B86sUV2r.css  index-BHgzQWVf.css  index-BM6frlUG.js  index-CIOi-Erw.css  index-CsWFIBkD.css  index-D1xkADOu.js  index-DHfeGZRH.js  index-DbguX7cZ.js  index-Dnsh59uB.js  index-DrZ3p_Nn.js  index-SWDsRgN-.css
web/frontend/: .env.example  index.html  package-lock.json  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/api/: client.ts
web/frontend/src/components/: Chat.tsx  ChatPanel.tsx  Header.tsx  LimitBanner.tsx  LimitModal.tsx  Message.tsx  PipelinePanel.tsx  Sidebar.tsx
web/frontend/src/hooks/: useChat.ts  useSession.ts
web/frontend/src/types/: index.ts
website/: index.html  package-lock.json  package.json  vite.config.js
website/src/: App.jsx  Docs.jsx  index.css  main.jsx
