[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onsetlab"
version = "0.1.0"
description = "Build AI agents with fine-tuned SLMs and MCP tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "OnsetLab Team"}
]
keywords = [
    "ai",
    "agents",
    "llm",
    "fine-tuning",
    "mcp",
    "model-context-protocol",
    "slm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies (always needed)
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# For training (only needed on Colab/GPU environment)
training = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "trl>=0.7.0",
    "bitsandbytes>=0.41.0",
    # unsloth installed separately: pip install unsloth
]

# For running agents locally
runtime = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
]

# For development
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Everything
all = [
    "onsetlab[training,runtime,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/onsetlab"
Documentation = "https://github.com/yourusername/onsetlab#readme"
Repository = "https://github.com/yourusername/onsetlab"
Issues = "https://github.com/yourusername/onsetlab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["onsetlab*"]

[tool.setuptools.package-data]
onsetlab = ["py.typed"]

# Ruff configuration (linter)
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

# Black configuration (formatter)
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
