[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onsetlab"
version = "0.2.2"
description = "Reliable tool-calling agents on local SLMs. Hybrid REWOO/ReAct architecture, MCP support, one-command export. No API keys, no cloud."
readme = "PYPI_README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "OnsetLab Team"}
]
keywords = [
    "ai",
    "agents",
    "slm",
    "small-language-models",
    "tool-calling",
    "rewoo",
    "mcp",
    "model-context-protocol",
    "ollama",
    "local-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# For API server mode in exported agents
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]
# For binary export
binary = [
    "pyinstaller>=5.0.0",
]
# For development
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
# Everything
all = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pyinstaller>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/riyanshibohra/onsetlab"
Documentation = "https://github.com/riyanshibohra/onsetlab#readme"
Repository = "https://github.com/riyanshibohra/onsetlab"
Issues = "https://github.com/riyanshibohra/onsetlab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["onsetlab*"]

[tool.setuptools.package-data]
onsetlab = ["py.typed", "mcp/registry/*.json", "benchmark/tests/*.json"]

# Ruff configuration (linter)
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

# Black configuration (formatter)
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
